--- a/.github/helloWorld.yml
+++ b/.github/helloWorld.yml
@@ -1,10 +1,11 @@
-name: Hello World
-
-on:
-  workflow_dispatch:
-
 jobs:
-  say_hello:
+  deploy:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "Hello Wrold!"
+      - uses: actions/checkout@v3
+      - name: Deploy to Firebase Hosting
+        uses: FirebaseExtended/action-hosting-deploy@v0
+        with:
+          repoToken: "${{ secrets.GITHUB_TOKEN }}"
+          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT }}"
+          channelId: live
