--- a/.github/helloWorld.yml
+++ b/.github/helloWorld.yml
@@ -9,3 +9,5 @@ jobs:
           repoToken: "${{ secrets.GITHUB_TOKEN }}"
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT }}"
           channelId: live
+on:
+  workflow_dispatch:
